Fixing bug for LOCPOT files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,12 @@ project (edp)
 # add custom directory to look for .cmake files
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/modules )
 
+# prepare configuration file
+SET(VERSION_MAJOR "1")
+SET(VERSION_MINOR "1")
+SET(VERSION_MICRO "2")
+configure_file(config.h.in ../src/config.h @ONLY)
+
 # Enable release build
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
     message(STATUS "Setting build type to 'Release' as none was specified.")
