Adding option for legend

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -21,9 +21,9 @@
 #ifndef _CONFIG_H
 #define _CONFIG_H
 
-#cmakedefine VERSION_MAJOR @VERSION_MAJOR@
-#cmakedefine VERSION_MINOR @VERSION_MINOR@
-#cmakedefine VERSION_MICRO @VERSION_MICRO@
+#define VERSION_MAJOR @VERSION_MAJOR@
+#define VERSION_MINOR @VERSION_MINOR@
+#define VERSION_MICRO @VERSION_MICRO@
 #define VERSION "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_MICRO@"
 
 static const std::string PROGRAM_VERSION(VERSION);
