--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ deploy_debian:
   tags:
     - debian-build
   before_script:
-    - apt update && apt -y install build-essential libboost-all-dev cmake libtclap-dev pkg-config libcairo2-dev libglm-dev binutils lintian
+    - apt update && apt -y install build-essential libboost-all-dev cmake libtclap-dev pkg-config libcairo2-dev libglm-dev binutils
   script:
     - bash build_deb.sh
   artifacts:
