--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,9 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: install-packages
-      run: sudo apt install -y libglm-dev libboost-all-dev libtclap-dev libcppunit-dev libcairo2-dev
-    - name: configure
+    - name: Install dependencies
+      run: sudo apt install -y libeigen3-dev libboost-all-dev libtclap-dev libcppunit-dev libcairo2-dev
+    - name: Configure CMake
       run: mkdir build && cd build && cmake ../src
-    - name: make
+    - name: Build
       run: cd build && make
+    - name: Perform unit tests
+      run: cd build && make test
