--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,12 +17,12 @@ jobs:
       run: sudo pip install sphinx sphinx-rtd-theme sphinxcontrib-tikz
     - name: Build documentation
       run: cd docs && make html
-    - name: Install SSH Key
+    - name: Install SSH key
       uses: shimataro/ssh-key-action@v2
       with:
-        key: {%- raw -%} ${{ secrets.SSH_PRIVATE_KEY }}
-        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-    - name: Adding Known Hosts
-      run: ssh-keyscan -H ${{ secrets.SSH_HOST }}{% endraw%} >> ~/.ssh/known_hosts
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        name: id_rsa # optional
+        known_hosts: ${{ secrets.KNOWN_HOST }}
+        if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
     - name: Deploy
       run: scp ./docs/_build/html/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEPLOY_PATH }}
