--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,5 @@
 name: sphinx
+runs-on: [self-hosted, linux, x64]
 
 on:
   push:
@@ -8,7 +9,7 @@ on:
 
 jobs:
   docs:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest, self-hosted
     steps:
     - uses: actions/checkout@v3
     - name: Install packages
