--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   docs:
-    runs-on: ubuntu-latest, self-hosted
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v3
     - name: Install packages
