--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   docs:
-    runs-on: [ubuntu-latest, self-hosted]
+    runs-on: [linux, x64, self-hosted]
     steps:
     - uses: actions/checkout@v3
     - name: Install packages
