--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,16 +27,9 @@ jobs:
     runs-on: [self-hosted, linux, x64]
     needs: build-docs
     steps:
-    - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
-      with:
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        name: id_rsa # optional
-        known_hosts: ${{ secrets.SSH_HOST }}
-        if_key_exists: ignore # replace / ignore / fail; optional (defaults to fail)
     - name: Download docs
       uses: actions/download-artifact@v3
       with:
         name: html-docs
     - name: Deploy
-      run: scp ./docs/_build/html/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.DEPLOY_PATH }}
+      run: cp ./docs/_build/html/* ${{ secrets.DEPLOY_PATH }}
