--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,5 +31,7 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: html-docs
+    - name: Debug
+      run: pwd && ls -alh && ls -alh html-docs
     - name: Deploy
-      run: cp ./docs/_build/html/* ${{ secrets.DEPLOY_PATH }}
+      run: cp html-docs/docs/_build/html/* ${{ secrets.DEPLOY_PATH }}
