Revising docs CI/CD

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,9 +2,9 @@ name: docs
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "docs" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "docs" ]
 
 jobs:
   build-docs:
@@ -24,13 +24,41 @@ jobs:
         path: ./docs/_build/html
 
   deploy:
-    runs-on: [self-hosted, linux, x64]
+    runs-on: ubuntu-latest
     needs: build-docs
+    permissions:
+      contents: read
+      packages: write
+
     steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
     - name: Download docs
       uses: actions/download-artifact@v3
       with:
         name: html-docs
         path: html-docs
-    - name: Deploy
-      run: touch ${{ secrets.DEPLOY_PATH }}/html && rm -r ${{ secrets.DEPLOY_PATH }}/html/* && cp -rv html-docs/* ${{ secrets.DEPLOY_PATH }}/html
+
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: |
+          ghcr.io/ifilot/edp-docs-nginx
+
+    - name: Log in to the Container registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: doc.Dockerfile
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
