--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,64 +1,46 @@
-name: docs
+name: Deployment of documentation
 
 on:
   push:
-    branches: [ "docs" ]
+    branches:
+      - master
   pull_request:
-    branches: [ "docs" ]
+    branches:
+      - master
+
+permissions:
+  contents: write  # Grants write access to the repository contents
 
 jobs:
-  build-docs:
+  build:
+    name: Build and Deploy Sphinx Documentation
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install packages
-      run: sudo apt update && sudo apt install -y git build-essential curl wget python3 python3-pip texlive texlive-pictures texlive-latex-extra pdf2svg poppler-utils netpbm imagemagick ghostscript
-    - name: Install Python packages
-      run: sudo pip install sphinx sphinx-rtd-theme sphinxcontrib-tikz
-    - name: Build documentation
-      run: cd docs && make html
-    - name: Upload math result for job 1
-      uses: actions/upload-artifact@v3
-      with:
-        name: html-docs
-        path: ./docs/_build/html
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-docs
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - name: Checkout repository
+    - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - name: Download docs
-      uses: actions/download-artifact@v4.1.7
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        name: html-docs
-        path: html-docs
+        python-version: 3.13.1
 
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: |
-          ghcr.io/ifilot/edp-docs-nginx
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install sphinx-rtd-theme \
+              sphinxcontrib-tikz \
+              pydata-sphinx-theme \
+              sphinx_design \
+              sphinx_subfigure \
+              myst_parser
+    - name: Build Documentation
+      run: |
+        cd docs
+        make html
 
-    - name: Log in to the Container registry
-      uses: docker/login-action@v2
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: doc.Dockerfile
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: docs/_build/html
